[package]
name = "fusedav-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardetng = "0.1.17"
encoding_rs = "0.8"
chrono = "0.4.24"
quick-xml = "0.28.2"
reqwest_dav = { git = "https://github.com/hayandev/reqwest_dav" }
urlencoding = "2.1.2"
fuser = "0.7"
libc = "0.2"
tokio ={ version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
